Fix notifications and fix overflow on history

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -47,6 +47,7 @@
 	right: 30px;
 	bottom: 30px;
 	top: 30px;
+	overflow: auto;
 }
 #request-container,#notification-container {
 	left: 30px;
